--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "i": "^0.3.7",
+    "morgan": "^1.10.0",
+    "npm": "^8.12.2"
   }
 }
