--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "ts-node-dev src/app.ts",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/app.js",
     "start:dev": "nodemon"
@@ -25,6 +26,7 @@
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
